[tool.poetry]
name = "cupcake"
version = "0.1.0"
description = "Cargo for C++"
authors = ["John Freeman <jfreeman08@gmail.com>"]
packages = [{include = "cupcake", from = "src"}]

[tool.poetry.scripts]
cupcake = 'cupcake.main:main'

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"
click-option-group = "^0.5.3"
tomlkit = "^0.10.1"
jinja2 = "^3.1.1"
semver = "^2.13.0"
libcst = "^0.4.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
