[tool.poetry]
name = "cupcake"
version = "1.0.0"
description = "Make C++ a piece of cake."
authors = ["John Freeman <jfreeman08@gmail.com>"]
packages = [{include = "cupcake", from = "src"}]

[tool.poetry.scripts]
cupcake = 'cupcake.main:main'

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.4"
click-option-group = "^0.5.3"
tomlkit = "^0.10.1"
jinja2 = "^3.1.1"

[tool.poetry.group.dev.dependencies]
shush = "^0.3.2"
pytest = "^7.0.1"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
